# chineseroom

./: .gitignore  README.md
benchmark/: CMakeLists.txt  benchmark.cpp
include/chineseroom/: chineseroom.hpp  fixed_string.hpp  replace.hpp  split.hpp  texter.hpp  wildcards.hpp
include/chineseroom/ascii/: is_valid.hpp  lower_case.hpp
test/: fixed_string.hpp  replace.hpp  split.hpp  test.cpp  texter.hpp  wildcards.hpp
tests/: CMakeLists.txt  tests.cpp
